Initial code for our group project
This is the ammended code I downloaded from from Lara (from Slack channel).
I've added 'this is us' header and wrote a <p>.
I moved the images to /images/ folder and ammended he HTML file accordingly.
I've updated my card, added my photo and linked it to my recipe page.
On my recipe page, I added a comment box (I spent a few hours on that, hopefully you like it and it is all responsive now)
I've added a simple footer.

--- a/Group_projectLara.html
+++ b/Group_projectLara.html
@@ -21,11 +21,14 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+            <a class="nav-link" href="#">Recipes</a>
+            <a class="nav-link" href="#">Fav Places</a>
+            <a class="nav-link" href="#">Etc</a>
           </div>
         </div>
       </div>
     </nav>
-    <h1 class="color mt-3">Fritole With Ricotta Cheese!</h1>
+    <h1 class="color">Fritole With Ricotta Cheese!</h1>
     <br>
     <div>
         <div class="container">
