--- a/index.html
+++ b/index.html
@@ -24,64 +24,76 @@
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link" href="#">Recipes</a>
+                        <a class="nav-link" href="#">Fave Places</a>
+                        <a class="nav-link" href="#">Etc</a>
                     </div>
                 </div>
             </div>
         </nav>
     <!-- intro about us -->
-        <h1 class="color mb-5 mt-3">About Us</h1>
-        <img class="responsivePhoto mb-5" src="home1.jpeg" alt="group 6 Piture">
-        <h4 class="mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h4>
+        <br>
+        <h1 class="color">This is Us</h1>
+        <br>
+        <h4 class="mb-5"> Welcome to our page! We are a group of aspiring female software developers on our journey of self-development.
+            And even though our stories and motivations are all different, there are many things that unite us.<br> The  most obvious one is the desire to learn how to code... But other things that we all have in common are the love of <font color= #FFAB00>travelling and food</font>.<br>
+            We invite you to get to know us a bit better by learning what our favourite dishes are. Make sure you give them a go and let us know how you liked them.
+            </h4>
     <!-- I divided the cards in 3 columns using grids from bootsrap -->
         <div class="container">
             <div class="row">
                 <div class="col text-center" id="col1">
-                    <div class="card mb-5" style="width: 18rem;">
-                        <img class="card-img-top" src="greycat.jpeg" alt="picture of Marisa">
+                    <div class="card" style="width: 18rem;">
+                        <img class="card-img-top" src="images/greycat.jpeg" alt="picture of Marisa">
                         <div class="card-body">
                             <h5 class="card-title">Marisa</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            <a href="#" class="btn">Go somewhere</a>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
                     </div>
                 </div>
                 <div class="col text-center" id="col2">
                     <div class="card mb-5" style="width: 18rem;">
-                        <img class="card-img-top" src="gingercat.jpeg" alt="picture of Sarah">
+                        <img class="card-img-top" src="images/gingercat.jpeg" alt="picture of Sarah">
                         <div class="card-body">
                             <h5 class="card-title">Sarah</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            <a href="sarah.html" class="btn">Beans and Plantain</a>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
                     </div>
-                    <div class="card mb-5" style="width: 18rem;">
-                        <img class="card-img-top" src="lara.jpeg" alt="picture of Lara">
+                    <div class="card" style="width: 18rem;">
+                        <img class="card-img-top" src="images/smilycat.jpeg" alt="picture of Lara">
                         <div class="card-body">
                             <h5 class="card-title">Lara</h5>
-                            <p class="card-text">Hi, I am Lara, I am from Italy and I am 28 years old. I like food, cats, travelling, cats, yoga and I am learning to roller skate and sew in my free time! One of my favourite recipes is fritole! A typical carnival sweet my grandmother has been making every year since I can remember!</p>
-                            <a href="Group_projectLara.html" class="btn">Fritole with ricotta</a>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a href="Group_projectLara.html" class="btn btn-primary">Go somewhere</a>
                         </div>
                     </div>
                 </div>
+        <!-- We might have to remove this card as I don't think this person is working with us on this project-->
                 <div class="col text-center" id="col3">
                     <div class="card mb-5" style="width: 18rem;">
-                        <img class="card-img-top" src="tabbycat.jpeg" alt="picture of Ifeyinwa">
+                        <img class="card-img-top" src="images/tabbycat.jpeg" alt="picture of Ifeyinwa">
                         <div class="card-body">
                             <h5 class="card-title">Ifeyinwa</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            <a href="#" class="btn">Go somewhere</a>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
                     </div>
-                    <div class="card mb-5" style="width: 18rem;">
-                        <img class="card-img-top" src="whitecat.jpeg" alt="picture of Marta">
+                    <div class="card" style="width: 18rem;">
+                        <img class="card-img-top" src="images/mw.jpeg" alt="picture of Marta">
                         <div class="card-body">
                             <h5 class="card-title">Marta</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            <a href="#" class="btn">Go somewhere</a>
+                            <p class="card-text">Originally from Poland, I've lived in the UK for the last 15 years now. This allowed me to travel and explore cuisines from all over the world. To find out what one of my favourite dishes are click on the button below. Let's cook! </p>
+                            <a href="Group_project_Marta.html" class="btn btn-primary">My Recipe</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+    <!--I added a simple footer-->
+    <footer>
+        <p>Made with 💛 by CFG G6</p>
+    </footer>
     </body>
 </html>
