--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
                         </div>
                     </div>
                     <div class="card" style="width: 18rem;">
-                        <img class="card-img-top" src="images/smilycat.jpeg" alt="picture of Lara">
+                        <img class="card-img-top" src="lara.jpeg" alt="picture of Lara">
                         <div class="card-body">
                             <h5 class="card-title">Lara</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <p class="card-text">Hi, I am Lara, I am from Italy and I am 28 years old. I like food, cats, travelling, cats, yoga and I am learning to roller skate and sew in my free time! One of my favourite recipes is fritole! A typical carnival sweet my grandmother has been making every year since I can remember!</p>
                             <a href="Group_projectLara.html" class="btn btn-primary">Go somewhere</a>
                         </div>
                     </div>
