--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Lara</h5>
                             <p class="card-text">Hi, I am Lara, I am from Italy and I am 28 years old. I like food, cats, travelling, cats, yoga and I am learning to roller skate and sew in my free time! One of my favourite recipes is fritole! A typical carnival sweet my grandmother has been making every year since I can remember!</p>
-                            <a href="Group_projectLara.html" class="btn btn-primary">Go somewhere</a>
+                            <a href="Group_projectLara.html" class="btn btn-primary">My Recipe</a>
                         </div>
                     </div>
                 </div>
