--- a/Group_projectLara.html
+++ b/Group_projectLara.html
@@ -91,5 +91,8 @@
                 </div>
             </div>
         </div>
+        <footer>
+            <p>Made with 💛 by CFG G6</p>
+        </footer>
   </body>
 </html>
