--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         <img class="card-img-top" src="images/mw.jpeg" alt="picture of Marta">
                         <div class="card-body">
                             <h5 class="card-title">Marta</h5>
-                            <p class="card-text">Originally from Poland, I've lived in the UK for the last 15 years. This allowed me to travel and explore cuisines from all over the world. And do other cool things like swimming with the whale sharks in Mexico, trekking on a glacier in Argentina and watch baby turtles being hatched at night on a beach in Sri Lanka. To find out what one of my favourite dishes are click on the button below. Let's cook! </p>
+                            <p class="card-text">Originally from Poland, I've lived in the UK for the last 15 years. This allowed me to travel and explore cuisines from all over the world... and do other cool things like swimming with the whale sharks in Mexico, trekking on a glacier in Argentina and watching baby turtles hatching at night on a beach in Sri Lanka. To find out what one of my favourite dishes are click on the button below. Let's cook! </p>
                             <a href="Group_project_Marta.html" class="btn btn-primary">My Recipe</a>
                         </div>
                     </div>
