--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Marisa</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <a href="sarah.html" class="btn btn-primary">Go somewhere</a>
                         </div>
                     </div>
                 </div>
