fixed card margins and centered cards

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="container">
             <div class="row">
                 <div class="col text-center" id="col1">
-                    <div class="card" style="width: 18rem;">
+                    <div class="card mb-5" style="width: 18rem;">
                         <img class="card-img-top" src="images/greycat.jpeg" alt="picture of Marisa">
                         <div class="card-body">
                             <h5 class="card-title">Marisa</h5>
@@ -61,7 +61,7 @@
                             <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
                     </div>
-                    <div class="card" style="width: 18rem;">
+                    <div class="card mb-5" style="width: 18rem;">
                         <img class="card-img-top" src="lara.jpeg" alt="picture of Lara">
                         <div class="card-body">
                             <h5 class="card-title">Lara</h5>
@@ -80,7 +80,7 @@
                             <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
                     </div>
-                    <div class="card" style="width: 18rem;">
+                    <div class="card mb-5" style="width: 18rem;">
                         <img class="card-img-top" src="images/mw.jpeg" alt="picture of Marta">
                         <div class="card-body">
                             <h5 class="card-title">Marta</h5>
