addded margin top to add a comment box

--- a/Group_projectLara.html
+++ b/Group_projectLara.html
@@ -59,7 +59,7 @@
             </div>
         </div>
     </div>
-    <div class="AddComment">       
+    <div class="AddComment mt-5">       
         <div class="row">
             <div class="col-10">
                 <div class="comment-box ml-2">
@@ -91,8 +91,9 @@
                 </div>
             </div>
         </div>
-        <footer>
-            <p>Made with 💛 by CFG G6</p>
-        </footer>
+    </div>
+    <footer>
+        <p>Made with 💛 by CFG G6</p>
+    </footer>
   </body>
 </html>
