--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Marisa</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            <a href="sarah.html" class="btn btn-primary">Go somewhere</a>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
                     </div>
                 </div>
@@ -57,8 +57,8 @@
                         <img class="card-img-top" src="images/gingercat.jpeg" alt="picture of Sarah">
                         <div class="card-body">
                             <h5 class="card-title">Sarah</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <p class="card-text">Hi,I'm Sarah and I love travelling, trying new foods and watching thrillers.</p>
+                            <a href="sarah.html" class="btn btn-primary">Go somewhere</a>
                         </div>
                     </div>
                     <div class="card mb-5" style="width: 18rem;">
