--- a/Group_projectMarisa.html
+++ b/Group_projectMarisa.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">      
         <link rel="stylesheet" href="g6.CSS">
-        <title>Fritole with ricotta cheese</title>
+        <title>Mexican Chilaquiles</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -34,10 +34,9 @@
     <div>
         <div class="container">
             <div class="row">
+               
                 <div class="col text-center">
-                    <img 
-                    src="img/chilaquiles.jpg"
-                    alt="Photo of the mexican dish, chilaquiles" class="responsive">
+                    <img class="responsivePhoto recipeimg" src="images/chilaquiles.jpg" alt="Photo of the mexican dish, chilaquiles">
                     <caption>Chilaquiles with eggs and avocado</caption>
                 </div>
         <div class="col">
