--- a/Group_projectMarisa.html
+++ b/Group_projectMarisa.html
@@ -29,14 +29,13 @@
       </div>
     </nav>
 <!--Lara's code-->
-    <h1 class="textcolor">Mexican Chilaquiles</h1>
+    <h1 class="color">Mexican Chilaquiles</h1>
     <br>
-    <div>
+       <div>
         <div class="container">
             <div class="row">
-               
                 <div class="col text-center">
-                    <img class="responsivePhoto recipeimg" src="images/chilaquiles.jpg" alt="Photo of the mexican dish, chilaquiles">
+                    <img class="responsivePhoto recipeimg" src="chilaquiles.jpg" alt="Chilaquiles">
                     <caption>Chilaquiles with eggs and avocado</caption>
                 </div>
         <div class="col">
