--- a/Group_projectMarisa.html
+++ b/Group_projectMarisa.html
@@ -35,8 +35,7 @@
         <div class="container">
             <div class="row">
                 <div class="col text-center">
-                    <img class="responsivePhoto recipeimg" src="chilaquiles.jpg" alt="Chilaquiles">
-                    <caption>Chilaquiles with eggs and avocado</caption>
+                    <img class="responsivePhoto recipeimg" src="images/chilaquiles.jpg" alt="Chilaquiles">
                 </div>
         <div class="col">
             <p>I'm originally from Southern California, and it's no secret that we love our Mexican food. As a proud second-generation Mexican-American, I have more than a few favourite recipes up my sleeve.</p>
