--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Sarah</h5>
                             <p class="card-text">Hi,I'm Sarah and I love travelling, trying new foods and watching thrillers.</p>
-                            <a href="sarah.html" class="btn btn-primary">Go somewhere</a>
+                            <a href="sarah.html" class="btn btn-primary">My recipe</a>
                         </div>
                     </div>
                     <div class="card mb-5" style="width: 18rem;">
