--- a/index.html
+++ b/index.html
@@ -40,15 +40,15 @@
             We invite you to get to know us a bit better by learning what our favourite dishes are. Make sure you give them a go and let us know how you liked them.
             </h4>
     <!-- I divided the cards in 3 columns using grids from bootsrap -->
-        <div class="container">
+           <div class="container">
             <div class="row">
                 <div class="col text-center" id="col1">
                     <div class="card mb-5" style="width: 18rem;">
-                        <img class="card-img-top" src="images/greycat.jpeg" alt="picture of Marisa">
+                        <img class="card-img-top" src="images/marisaandcat.jpg" alt="picture of Marisa holding a cat in the snow">
                         <div class="card-body">
                             <h5 class="card-title">Marisa</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <p class="card-text">Hey! I'm Marisa, originally from Southern California, but in the UK since 2010. When people ask me what I miss about home, I instantly think: mexican food! It's full of fresh flavours, unfussy, and nourishing - so I am including one of my favourite recipes here.</p>
+                            <a href="Group_projectMarisa.html" class="btn btn-primary">My Recipe</a>
                         </div>
                     </div>
                 </div>
