--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </div>
                 <div class="col text-center" id="col2">
                     <div class="card mb-5" style="width: 18rem;">
-                        <img class="card-img-top" src="images/gingercat.jpeg" alt="picture of Sarah">
+                        <img class="card-img-top" src="sarah.jpeg" alt="picture of Sarah">
                         <div class="card-body">
                             <h5 class="card-title">Sarah</h5>
                             <p class="card-text">Hi,I'm Sarah and I love travelling, trying new foods and watching thrillers.</p>
