--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
                         <img class="card-img-top" src="sarah.jpeg" alt="picture of Sarah">
                         <div class="card-body">
                             <h5 class="card-title">Sarah</h5>
-                            <p class="card-text">Hi,I'm Sarah and I love travelling, trying new foods and watching thrillers.</p>
-                            <a href="sarah.html" class="btn btn-primary">My recipe</a>
+                            <p class="card-text">Hi,I'm Sarah and I love travelling, trying new foods and watching thrillers. I am not a picky eater and love to try new foods. I am Nigerian and you can click to find out of my favourite West African dishes!</p>
+                            <a href="sarah.html" class="btn btn-primary">My Recipe</a>
                         </div>
                     </div>
                     <div class="card mb-5" style="width: 18rem;">
