--- a/Group_projectMarisa.html
+++ b/Group_projectMarisa.html
@@ -44,7 +44,7 @@
             <h2>Chilaquiles Rojos</h2>
             <h5>Recipe from <a href="https://www.mexicoinmykitchen.com/how-to-cook-mexican-chilaquiles/#recipe">Mexico In My Kitchen</a></h5>
       <!--Ingredients-->
-            <h3>Ingredients:</h3>
+            <h4>Ingredients:</h4>
                 <ul>
                     <li><span style="font-weight:600">12 corn tortillas</span>, cut into six pieces.<br>Preferably dry tortillas left out on the counter overnight</li>
                     <li><span style="font-weight:600">⅓ cup</span> Vegetable Oil</li>
@@ -64,7 +64,7 @@
                     <li><span style="font-weight:600">½ cup</span> Mexican cream, or soured cream, thinned with double cream</li>
                     <li><span style="font-weight:600">½ cup </span> Mexican Queso Fresco, or feta cheese, crumbled</li>
                     <li><span style="font-weight:600">⅓ cup </span> Cilantro (coriander), chopped to garnish</li>
-                    <li><span style="font-weight:600">2 slices </span>onion rings, separated</li>
+                    <li><span style="font-weight:600">2 slices </span>onion, separated</li>
                     <li><span style="font-weight:600">Salt</span> to taste</li>
                 </ul>
     <!--Methods-->
