--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
                         <img class="card-img-top" src="images/tabbycat.jpeg" alt="picture of Ifeyinwa">
                         <div class="card-body">
                             <h5 class="card-title">Ifeyinwa</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <p class="card-text">Hey, I am Ifeyinwa, I am from Nigeria. I love being in nature, reading and videography. One of my favourite things to do is braid hair and upcycle old pairs of jeans!</p>
+                            <a href="#" class="btn btn-primary">My Recipe</a>
                         </div>
                     </div>
                     <div class="card mb-5" style="width: 18rem;">
