--- a/sarah.html
+++ b/sarah.html
@@ -65,7 +65,33 @@
                             <li>Chop smoked turkey and place it in the sauce to cook for a few minutes. Then, slowly transfer your sauce to the beans, stir well and cook for 5 minutes on medium heat</li>
                             <li>Taste to check for seasoning and adjust spices accordingly. Turn off heat and allow it cool a bit</li> 
                         </ol>
+                          <div class="AddComment">       
+        <div class="row">
+            <div class="col-10">
+                <div class="comment-box ml-2">
+                    <h3> <font color="#464646">Add a comment</font></h3>
+                    <div class="rating"> 
+                        <input type="radio" name="rating" value="5" id="5"><label for="5">☆</label>
+                        <input type="radio" name="rating" value="4" id="4"><label for="4">☆</label> 
+                        <input type="radio" name="rating" value="3" id="3"><label for="3">☆</label>
+                        <input type="radio" name="rating" value="2" id="2"><label for="2">☆</label>
+                        <input type="radio" name="rating" value="1" id="1"><label for="1">☆</label>
                     </div>
+                    <div class="comment-area">
+                        <textarea class="form-control" placeholder="how did you like the recipe?" rows="2"></textarea>
+                    </div>
+                    <div class="comment-btns mt-2">
+                        <div class="row">
+                            <div class="col-6">
+                                <div class="pull-left">
+                                <button class="btn btn-success cancel btn-sm">Cancel</button>          
+                                </div>
+                            </div>
+                            <div class="col-6">
+                                <div class="pull-left">
+                                <button class="btn btn-success send btn-sm">Send</i></button>          
+                                </div
+                </div>
                 </div>
             </div>
         </div>
