--- a/Group_projectMarisa.html
+++ b/Group_projectMarisa.html
@@ -28,6 +28,7 @@
         </div>
       </div>
     </nav>
+      <br>
     <h1 class="color">Mexican Chilaquiles</h1>
     <br>
     <div>
@@ -38,11 +39,12 @@
                 </div>
         <div class="col">
             <p>I'm originally from Southern California, and it's no secret that we love our Mexican food. As a proud second-generation Mexican-American, I have more than a few favourite recipes up my sleeve.</p>
-            <p>One of my favourite breakfasts is chilaquiles <i>(chee-lay-kee-lays)</i>. It's versatile and quite easy to make!</p>
+            <p>One of my favourite breakfasts is <font color= #FFAB00>chilaquiles <i>(chee-lay-kee-lays)</i></font>. It's versatile and quite easy to make!</p>
             <p><span style="font-weight:600">Pro tip:</span> If you don't have corn tortillas, use tortilla chips! Just skip step one, since your tortillas are already fried.</p>
       <!--Recipe begins-->
             <h2>Chilaquiles Rojos</h2>
             <h5>Recipe from <a href="https://www.mexicoinmykitchen.com/how-to-cook-mexican-chilaquiles/#recipe">Mexico In My Kitchen</a></h5>
+            <br>
       <!--Ingredients-->
             <h5>Ingredients:</h5>
                 <ul>
