--- a/sarah.html
+++ b/sarah.html
@@ -66,7 +66,7 @@
                             <li>Taste to check for seasoning and adjust spices accordingly. Turn off heat and allow it cool a bit</li> 
                         </ol>
 
-                     <div class="AddComment">       
+                <div class="AddComment">       
         <div class="row">
             <div class="col-10">
                 <div class="comment-box ml-2">
@@ -91,11 +91,17 @@
                             <div class="col-6">
                                 <div class="pull-left">
                                 <button class="btn btn-success send btn-sm">Send</i></button>          
-                                </div
-                </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+    <!--footer-->
+    <footer>
+        <p>Made with 💛 by CFG G6</p>
+    </footer>
   </body>
 </html>
