--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <!-- We might have to remove this card as I don't think this person is working with us on this project-->
                 <div class="col text-center" id="col3">
                     <div class="card mb-5" style="width: 18rem;">
-                        <img class="card-img-top" src="images/ifeyinwa.jpg" alt="picture of Ifeyinwa">
+                        <img class="card-img-top" src="ifeyinwa.jpg" alt="picture of Ifeyinwa">
                         <div class="card-body">
                             <h5 class="card-title">Ifeyinwa</h5>
                             <p class="card-text">Hey, I am Ifeyinwa, I am from Nigeria. I love being in nature, reading and videography. One of my favourite things to do is braid hair and upcycle old pairs of jeans!</p>
