--- a/sarah.html
+++ b/sarah.html
@@ -65,7 +65,10 @@
                             <li>Chop smoked turkey and place it in the sauce to cook for a few minutes. Then, slowly transfer your sauce to the beans, stir well and cook for 5 minutes on medium heat</li>
                             <li>Taste to check for seasoning and adjust spices accordingly. Turn off heat and allow it cool a bit</li> 
                         </ol>
-
+                 </div>
+            </div>
+        </div>
+    </div>
                 <div class="AddComment">       
         <div class="row">
             <div class="col-10">
