--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Ifeyinwa</h5>
                             <p class="card-text">Hey, I am Ifeyinwa, I am from Nigeria. I love being in nature, reading and videography. One of my favourite things to do is braid hair and upcycle old pairs of jeans!</p>
-                            <a href="#" class="btn btn-primary">My Recipe</a>
+                            <a href="ifeyinwa.html" class="btn btn-primary">My Recipe</a>
                         </div>
                     </div>
                     <div class="card mb-5" style="width: 18rem;">
