--- a/ifeyinwa.html
+++ b/ifeyinwa.html
@@ -105,10 +105,9 @@
             </div>
         </div>
     </div>
+<!--footer-->
  <footer>
         <p>Made with 💛 by CFG G6</p>
     </footer>
-
-
   </body>
 </html>
