--- a/ifeyinwa.html
+++ b/ifeyinwa.html
@@ -21,7 +21,7 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <ul class="navbar-nav">
             <li class="nav-item active">
-                <a class="nav-link" aria-current="page" href="#">Home</a>
+                <a class="nav-link" aria-current="page" href="index.html">Home</a>
             </li>
             <li>
                 <a class="nav-link" href="#">About Us</a>
